--- a/index.html
+++ b/index.html
@@ -473,7 +473,8 @@
             <li>Nexus</li>
             <li>IBM Cloud Container Registry</li>
             <li>IBM Cloud Private</li>
-            <li>IBM Kubernetes Service</li>
+            <li>IBM Kubernetes Service</li>            
+            <li>Amazon Web Services</li>
             <li>Amazon Web Services Cloud</li>
             <li>Bash Script</li>
             <li>Python</li>
@@ -516,76 +517,109 @@
                     <p>
                         <br><br>
                         <li>
-                            Learn Devops The Complete Kubernetes Course
+                            Ultimate AWS Certified SysOps Administrator Associate 2021
                         </li>
                         <li>
-                            Hands-On Auto DevOps with GitLab CI
+                            Ultimate AWS Certified Solutions Architect Associate 2021
                         </li>
                         <li>
-                            GitLab introduction
+                            AWS Certified Solutions Architect - Associate 2020
                         </li>
                         <li>
-                            DevOps for DevOps Project Team Members
+                            AWS Essentials
                         </li>
                         <li>
-                            Docker Essential
+                            Certified Kubernetes Administrator (CKA) with Practice Tests
                         </li>
                         <li>
-                            Kubernetes Getting Started
+                            Docker and Kubernetes: The Complete Guide
                         </li>
                         <li>
-                            DevOps Essentials
+                            Docker Mastery: with Kubernetes +Swarm from a Docker Captain
                         </li>
                         <li>
-                            Get started with Kubernetes and IBM Cloud Container Service
+                            Istio Hands-On for Kubernetes
                         </li>
                         <li>
-                            Docker Essentials: A Developer Introduction
+                            Kubernetes: Getting Started (2019)
+                        </li>
+                        <li>
+                            Getting started with Microservices with Istio and IBM Cloud Kubernetes Service
                         </li>
                         <li>
                             Containers, K8s and Istio on IBM Cloud
                         </li>
                         <li>
+                            Learn Devops The Complete Kubernetes Course
+                        </li>
+                        <li>
+                            Docker Essentials: A Developer Introduction
+                        </li>
+                        <li>
                             Beyond the Basics: Istio and IBM Cloud Kubernetes Service
                         </li>
                         <li>
-                            Jenkins Beginner Tutorials
+                            Docker Essential
                         </li>
                         <li>
-                            Git: Become an Expert in Git and GitHub
+                            Mastering Ansible - From Beginner to Expert in Ansible
                         </li>
                         <li>
-                            Build+Deploy+Test with Jenkins 2.0
-                        </li>
-                        <li>
-                            Ansible Advanced-HandsOn-DevOps
-                        </li>
-                        <li>
-                            Ansible Essentials Simplicity in Automation
-                        </li>
-                        <li>
-                            Ansible Essentials Simplicity in Automation
+                            Ansible Advanced- Hands On - DevOps 
                         </li>
                         <li>
                             Devops Series Server Automation Using Ansible
                         </li>
                         <li>
-                            Dvops Beginners Guide To Automation With Ansible
+                            GitLab CI: Pipelines, CI/CD and DevOps for Beginners
                         </li>
                         <li>
-                            DevOps learning path for DevOps Essentials badge
+                            GITLab introduction
                         </li>
                         <li>
-                            DevOps - The pre-Requisite
+                            Hands-On Auto DevOps with GitLab CI
                         </li>
                         <li>
-                            DevOps Crash Course: CI/CD with Jenkins Pipelines Groovy DSL
+                            Git & GitHub Complete Masterclass : Beginner to Git Expert
                         </li>
                         <li>
-                            Getting Started with Jenkins
+                            Git : Become an Expert in Git and GitHub
+                        </li>
+                        <li>
+                            Jenkins, From Zero To Hero: Become a DevOps Jenkins Master
+                        </li>
+                        <li>
+                            Jenkins Beginner Tutorials
+                        </li>
+                        <li>
+                            Build+Deploy+Test with Jenkins 2.0
+                        </li>
+                        <li>
+                            Complete Bash Shell Scripting
+                        </li>
+                        <li>
+                            Devops Essentials from Udemy
+                        </li>
+                        <li>
+                            DevOps for DevOps Project Team Members
+                        </li>
+                        <li>
+                            DevOps Essentials from IBM
+                        </li>
+                        <li>
+                            DevOps Defined
+                        </li>
+                        <li>
+                            DevOps Learning path for DevOps Essentials badge
                         </li>
                         <li>
                             Just enough Ansible to be dangerous
+                        </li>
+                        <li>
+                            Get started with Kubernetes and IBM Cloud Container Service
+                        </li>
+                        <li>
+                            DevOps Pre-Requisite Course
                         </li>
                     </p>
                 </div>
