Updated three years data

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I am having 2+ years of experience as a Skilled DevOps engineer. Hands-on experience on managing micro Services using Docker and Kubernetes. Experienced with principles and best practices of Software Configuration Management in Agile, Waterfall methodologies. Good Understanding of Docker file and its components, Written some of the Docker files for Developing Images. Good understanding of Kubernetes. Managing containers using Orchestration tools like Kubernetes. Having a good understanding of Container Log and Management, Networking. Good Understanding of Docker file and its components, Written some of the Docker files for Developing Images. Good understanding of Kubernetes manager components like API Server, etc, Scheduler, Kubernetes Controller and Kubernetes Node components like Kube Proxy, POD, Kubelet,  Replication Groups, and POD Controller and Good understanding of Kubernetes Networks like Ingres and NodePort. Implemented CI/CD Process with Jenkins and UCD/Ansible to have automation of Continues Integration, Continues Delivery, and Continues Deployment. Involved in Configuring Different jobs like Freestyle and Pipeline Projects and Multi-Branch Project. Hands-on experience in Creating Distributed Environment using Master-Slave Architecture. Involved in Configuring Nexus Repository and JFrog  Repository for Managing Artifacts. Experienced in Creating and Managing HTTP and Container Servers like Nginx, HTTP Server, and Tomcat.
+                        I am having 3+ years of experience as a Skilled DevOps engineer. Hands-on experience on managing micro Services using Docker and Kubernetes. Experienced with principles and best practices of Software Configuration Management in Agile, Waterfall methodologies. Good Understanding of Docker file and its components, Written some of the Docker files for Developing Images. Good understanding of Kubernetes. Managing containers using Orchestration tools like Kubernetes. Having a good understanding of Container Log and Management, Networking. Good Understanding of Docker file and its components, Written some of the Docker files for Developing Images. Good understanding of Kubernetes manager components like API Server, etc, Scheduler, Kubernetes Controller and Kubernetes Node components like Kube Proxy, POD, Kubelet,  Replication Groups, and POD Controller and Good understanding of Kubernetes Networks like Ingres and NodePort. Implemented CI/CD Process with Jenkins and UCD/Ansible to have automation of Continues Integration, Continues Delivery, and Continues Deployment. Involved in Configuring Different jobs like Freestyle and Pipeline Projects and Multi-Branch Project. Hands-on experience in Creating Distributed Environment using Master-Slave Architecture. Involved in Configuring Nexus Repository and JFrog  Repository for Managing Artifacts. Experienced in Creating and Managing HTTP and Container Servers like Nginx, HTTP Server, and Tomcat.
 
                     </p>
                 </div>
@@ -122,6 +122,9 @@
                 </li>
                 <li>
                     IBM Kubernetes Service                    
+                </li>
+                <li>
+                    Amazon Web Services Cloud
                 </li>
                 <li>
                     Docker Container Registry
@@ -429,6 +432,26 @@
                 We really appreciate all of your hard work and effort. There is much more to achieve in the coming months and we are looking forward to very active participation from you.
 
                 You did a wonderful job!!! Keep it up.
+            </p>
+        </div>
+        <!-- End .honor-block -->
+
+        <div class="education-block">
+            <h3><b>IBM Champion Learner Gold 2020</b></h3>
+            <span class="education-date">2020</span>
+            <h4></h4>
+            <p>
+                Completed 200+ learning hours and three certificates/badges
+            </p>
+        </div>
+        <!-- End .honor-block -->
+
+        <div class="education-block">
+            <h3><b>IBM Champion Learner Gold 2021</b></h3>
+            <span class="education-date">April 2019</span>
+            <h4></h4>
+            <p>
+                Completed 200+ learning hours and three certificates/badges
             </p>
         </div>
         <!-- End .honor-block -->
@@ -755,7 +778,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2020 Balkrishna Atmaram Londhe
+                        Copyright &copy; 2021 Balkrishna Atmaram Londhe
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -769,13 +792,13 @@
                             <a href="https://github.com/BalkrishnaBK" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://wa.me/919623325030" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                            <a href="https://wa.me/919325877900" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/in/balkrishna-londhe-5335b088" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.youracclaim.com/users/balkrishna-londhe" target="_blank"><i class="fa fa-star-o" aria-hidden="true"></i></a>
+                            <a href="https://www.credly.com/users/balkrishna-londhe" target="_blank"><i class="fa fa-star-o" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://instagram.com/balkrishna_atmaram_londhe" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
