Added certificates and updated href

--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
         </div>
         <ul id="menu" class="shadow">
             <li>
-                <a href="#about">About</a>
+                <a href="#about" target="_blank">About</a>
             </li>
             <li>
-                <a href="#experience">Experience</a>
+                <a href="#experience" target="_blank">Experience</a>
             </li>
             <li>
-                <a href="#responsibilities">Responsibilities</a>
+                <a href="#responsibilities" target="_blank">Responsibilities</a>
             </li>
             <li>
-                <a href="#honors">Honors & awards</a>
+                <a href="#honors" target="_blank">Honors & awards</a>
             </li>
             <li>
-                <a href="#skills">Skills</a>
+                <a href="#skills" target="_blank">Skills</a>
             </li>
             <li>
-                <a href="#certificates">Certifications and Key Courses</a>
+                <a href="#certificates" target="_blank">Certifications and Key Courses</a>
             </li>
             <li>
-                <a href="#education">Education</a>
+                <a href="#education" target="_blank">Education</a>
             </li>
             <li>
-                <a href="#publications">Publications</a>
+                <a href="#publications" target="_blank">Publications</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="#contact" target="_blank">Contact</a>
             </li>
         </ul>
     </header>
@@ -540,109 +540,61 @@
                     <p>
                         <br><br>
                         <li>
-                            Ultimate AWS Certified SysOps Administrator Associate 2021
+                            Microsoft Certified: Azure Fundamentals from Microsoft on 2021-04-04
                         </li>
                         <li>
-                            Ultimate AWS Certified Solutions Architect Associate 2021
+                            IBM Cloud Private - Continuous Integration/Continuous Delivery Pipelines from IBM on 2021-04-22
                         </li>
                         <li>
-                            AWS Certified Solutions Architect - Associate 2020
+                            DevOps Essentials from IBM on 2020-06-30
                         </li>
                         <li>
-                            AWS Essentials
+                            DevOps for DevOps Project Team Members from IBM on 2020-06-30
                         </li>
                         <li>
-                            Certified Kubernetes Administrator (CKA) with Practice Tests
+                            DevSecOps Essentials from IBM on 2020-06-25
                         </li>
                         <li>
-                            Docker and Kubernetes: The Complete Guide
+                            GitLab introduction from IBM on 2020-06-30
                         </li>
                         <li>
-                            Docker Mastery: with Kubernetes +Swarm from a Docker Captain
+                            Hands-On Auto DevOps with GitLab CI from IBM on 2020-06-30
                         </li>
                         <li>
-                            Istio Hands-On for Kubernetes
+                            Beyond the Basics: Istio and IBM Cloud Kubernetes Service from IBM on 2019-01-27
                         </li>
                         <li>
-                            Kubernetes: Getting Started (2019)
+                            Containers, K8s, and Istio on IBM Cloud from IBM on 2019-01-27
                         </li>
                         <li>
-                            Getting started with Microservices with Istio and IBM Cloud Kubernetes Service
+                            IBM Cloud Kubernetes Service from IBM on 2019-01-27
                         </li>
                         <li>
-                            Containers, K8s and Istio on IBM Cloud
+                            Docker Essentials: A Developer Introduction from IBM on 2019-01-18
                         </li>
                         <li>
-                            Learn Devops The Complete Kubernetes Course
+                            Getting Started with Containers on IBM Cloud from IBM on 2019-01-20
                         </li>
                         <li>
-                            Docker Essentials: A Developer Introduction
+                            Get started with Kubernetes and IBM Cloud Container Service from IBM on 2018-07-05
                         </li>
                         <li>
-                            Beyond the Basics: Istio and IBM Cloud Kubernetes Service
+                            IBM Cloud Essentials from IBM on 2018-05-03
                         </li>
                         <li>
-                            Docker Essential
+                            IBM Garage Methodology Explorer from IBM on 2021-04-23
                         </li>
                         <li>
-                            Mastering Ansible - From Beginner to Expert in Ansible
+                            Enterprise Design Thinking Practitioner from IBM on 2019-01-19
                         </li>
                         <li>
-                            Ansible Advanced- Hands On - DevOps 
+                            Enterprise Design Thinking Co-Creator from IBM on 2020-06-26
                         </li>
                         <li>
-                            Devops Series Server Automation Using Ansible
+                            IBM Automation Essentials from IBM on 2020-04-04
                         </li>
                         <li>
-                            GitLab CI: Pipelines, CI/CD and DevOps for Beginners
-                        </li>
-                        <li>
-                            GITLab introduction
-                        </li>
-                        <li>
-                            Hands-On Auto DevOps with GitLab CI
-                        </li>
-                        <li>
-                            Git & GitHub Complete Masterclass : Beginner to Git Expert
-                        </li>
-                        <li>
-                            Git : Become an Expert in Git and GitHub
-                        </li>
-                        <li>
-                            Jenkins, From Zero To Hero: Become a DevOps Jenkins Master
-                        </li>
-                        <li>
-                            Jenkins Beginner Tutorials
-                        </li>
-                        <li>
-                            Build+Deploy+Test with Jenkins 2.0
-                        </li>
-                        <li>
-                            Complete Bash Shell Scripting
-                        </li>
-                        <li>
-                            Devops Essentials from Udemy
-                        </li>
-                        <li>
-                            DevOps for DevOps Project Team Members
-                        </li>
-                        <li>
-                            DevOps Essentials from IBM
-                        </li>
-                        <li>
-                            DevOps Defined
-                        </li>
-                        <li>
-                            DevOps Learning path for DevOps Essentials badge
-                        </li>
-                        <li>
-                            Just enough Ansible to be dangerous
-                        </li>
-                        <li>
-                            Get started with Kubernetes and IBM Cloud Container Service
-                        </li>
-                        <li>
-                            DevOps Pre-Requisite Course
+                            Cognitive Practitioner from IBM on 2018-06-02
                         </li>
                     </p>
                 </div>
@@ -668,18 +620,6 @@
                         </li>
                         <li>
                             C++ Language
-                        </li>
-                        <li>
-                            Enterprise Design Thinking Practitioner
-                        </li>
-                        <li>
-                            Enterprise Design Thinking Co-Creator
-                        </li>
-                        <li>
-                            IBM Automation Essentials
-                        </li>
-                        <li>
-                            Cognitive Practitioner
                         </li>
                     </p>
                 </div>
