--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
         </div>
         <ul id="menu" class="shadow">
             <li>
-                <a href="#about" target="_blank">About</a>
+                <a href="#about" target="_blank" rel="noopener noreferrer">About</a>
             </li>
             <li>
-                <a href="#experience" target="_blank">Experience</a>
+                <a href="#experience" target="_blank" rel="noopener noreferrer">Experience</a>
             </li>
             <li>
-                <a href="#responsibilities" target="_blank">Responsibilities</a>
+                <a href="#responsibilities" target="_blank" rel="noopener noreferrer">Responsibilities</a>
             </li>
             <li>
-                <a href="#honors" target="_blank">Honors & awards</a>
+                <a href="#honors" target="_blank" rel="noopener noreferrer">Honors & awards</a>
             </li>
             <li>
-                <a href="#skills" target="_blank">Skills</a>
+                <a href="#skills" target="_blank" rel="noopener noreferrer">Skills</a>
             </li>
             <li>
-                <a href="#certificates" target="_blank">Certifications and Key Courses</a>
+                <a href="#certificates" target="_blank" rel="noopener noreferrer">Certifications and Key Courses</a>
             </li>
             <li>
-                <a href="#education" target="_blank">Education</a>
+                <a href="#education" target="_blank" rel="noopener noreferrer">Education</a>
             </li>
             <li>
-                <a href="#publications" target="_blank">Publications</a>
+                <a href="#publications" target="_blank" rel="noopener noreferrer">Publications</a>
             </li>
             <li>
-                <a href="#contact" target="_blank">Contact</a>
+                <a href="#contact" target="_blank" rel="noopener noreferrer">Contact</a>
             </li>
         </ul>
     </header>
