rel="noopener noreferrer"

--- a/index.html
+++ b/index.html
@@ -729,22 +729,22 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/BalkrishnaBK" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/BalkrishnaBK" target="_blank" rel="noopener noreferrer"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://wa.me/919325877900" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                            <a href="https://wa.me/919325877900" target="_blank" rel="noopener noreferrer"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/in/balkrishna-londhe-5335b088" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/balkrishna-londhe-5335b088" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.credly.com/users/balkrishna-londhe" target="_blank"><i class="fa fa-star-o" aria-hidden="true"></i></a>
+                            <a href="https://www.credly.com/users/balkrishna-londhe" target="_blank" rel="noopener noreferrer"><i class="fa fa-star-o" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://instagram.com/balkrishna_atmaram_londhe" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            <a href="https://instagram.com/balkrishna_atmaram_londhe" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="tel:+919325877900" target="_blank"><i class="fa fa-mobile-phone" aria-hidden="true"></i></a>
+                            <a href="tel:+919325877900" target="_blank" rel="noopener noreferrer"><i class="fa fa-mobile-phone" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
