--- a/index.html
+++ b/index.html
@@ -540,7 +540,9 @@
                     <p>
                         <br><br>
                         <li>
-                            Microsoft Certified: Azure Fundamentals from Microsoft on 2021-04-04
+                            <a href="Microsoft Certified: Azure Fundamentals from Microsoft on 2021-04-04">
+                                <img src="images/Certificates/Azure Fundamentals AZ-900.jpg">
+                            </a>
                         </li>
                         <li>
                             IBM Cloud Private - Continuous Integration/Continuous Delivery Pipelines from IBM on 2021-04-22
