Revert "Updated image with href"
This reverts commit 338d3c8eda9f652aa396a203c1e5b256bca24df3.

--- a/index.html
+++ b/index.html
@@ -540,9 +540,7 @@
                     <p>
                         <br><br>
                         <li>
-                            <a href="Microsoft Certified: Azure Fundamentals from Microsoft on 2021-04-04">
-                                <img src="images/Certificates/Azure Fundamentals AZ-900.jpg">
-                            </a>
+                            Microsoft Certified: Azure Fundamentals from Microsoft on 2021-04-04
                         </li>
                         <li>
                             IBM Cloud Private - Continuous Integration/Continuous Delivery Pipelines from IBM on 2021-04-22
