--- a/index.html
+++ b/index.html
@@ -540,7 +540,8 @@
                     <p>
                         <br><br>
                         <li>
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Azure%20Fundamentals%20AZ-900.jpg" target="_blank" rel="noopener noreferrer">Microsoft Certified: Azure Fundamentals from Microsoft on 2021-04-04 </a>                                                       
+                            Microsoft Certified: Azure Fundamentals 
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Azure%20Fundamentals%20AZ-900.jpg" target="_blank" rel="noopener noreferrer">from Microsoft on 2021-04-03</a>                                                       
                         </li>
                         <li>
                             IBM Cloud Private - Continuous Integration/Continuous Delivery Pipelines from IBM on 2021-04-22
