--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
         </div>
         <ul id="menu" class="shadow">
             <li>
-                <a href="#about" target="_blank" rel="noopener noreferrer">About</a>
+                <a href="https://balkrishnabk.github.io/#about" target="_blank" rel="noopener noreferrer">About</a>
             </li>
             <li>
-                <a href="#experience" target="_blank" rel="noopener noreferrer">Experience</a>
+                <a href="https://balkrishnabk.github.io/#experience" target="_blank" rel="noopener noreferrer">Experience</a>
             </li>
             <li>
-                <a href="#responsibilities" target="_blank" rel="noopener noreferrer">Responsibilities</a>
+                <a href="https://balkrishnabk.github.io/#responsibilities" target="_blank" rel="noopener noreferrer">Responsibilities</a>
             </li>
             <li>
-                <a href="#honors" target="_blank" rel="noopener noreferrer">Honors & awards</a>
+                <a href="https://balkrishnabk.github.io/#honors" target="_blank" rel="noopener noreferrer">Honors & awards</a>
             </li>
             <li>
-                <a href="#skills" target="_blank" rel="noopener noreferrer">Skills</a>
+                <a href="https://balkrishnabk.github.io/#skills" target="_blank" rel="noopener noreferrer">Skills</a>
             </li>
             <li>
-                <a href="#certificates" target="_blank" rel="noopener noreferrer">Certifications and Key Courses</a>
+                <a href="https://balkrishnabk.github.io/#certificates" target="_blank" rel="noopener noreferrer">Certifications and Key Courses</a>
             </li>
             <li>
-                <a href="#education" target="_blank" rel="noopener noreferrer">Education</a>
+                <a href="https://balkrishnabk.github.io/#education" target="_blank" rel="noopener noreferrer">Education</a>
             </li>
             <li>
-                <a href="#publications" target="_blank" rel="noopener noreferrer">Publications</a>
+                <a href="https://balkrishnabk.github.io/#publications" target="_blank" rel="noopener noreferrer">Publications</a>
             </li>
             <li>
-                <a href="#contact" target="_blank" rel="noopener noreferrer">Contact</a>
+                <a href="https://balkrishnabk.github.io/#contact" target="_blank" rel="noopener noreferrer">Contact</a>
             </li>
         </ul>
     </header>
@@ -541,61 +541,75 @@
                         <br><br>
                         <li>
                             Microsoft Certified: Azure Fundamentals from Microsoft on 2021-04-03
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Azure%20Fundamentals%20AZ-900.jpg" target="_blank" rel="noopener noreferrer"> (click here to see certificate)</a>                                                       
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Azure%20Fundamentals%20AZ-900.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
                             IBM Cloud Private - Continuous Integration/Continuous Delivery Pipelines from IBM on 2021-04-22
-                        </li>
-                        <li>
-                            DevOps Essentials from IBM on 2020-06-30
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/CI-CD-1.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
                             DevOps for DevOps Project Team Members from IBM on 2020-06-30
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/DevOps%20for%20DevOps%20Project%20Team%20Members.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
                             DevSecOps Essentials from IBM on 2020-06-25
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/DevSecOps_Essentials.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
                             GitLab introduction from IBM on 2020-06-30
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/GITLab%20introduction.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
                             Hands-On Auto DevOps with GitLab CI from IBM on 2020-06-30
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Hands-On%20Auto%20DevOps%20with%20GitLab%20CI.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
                             Beyond the Basics: Istio and IBM Cloud Kubernetes Service from IBM on 2019-01-27
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Beyond_the_Basics__Istio_and_IBM_Cloud_Kubernetes_Service.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
                             Containers, K8s, and Istio on IBM Cloud from IBM on 2019-01-27
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Containers__K8s_and_Istio_on_IBM_Cloud.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
                             IBM Cloud Kubernetes Service from IBM on 2019-01-27
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/IBM_Cloud_Kubernetes_Service.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
                             Docker Essentials: A Developer Introduction from IBM on 2019-01-18
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Docker_Essentials__A_Developer_Introduction.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
-                            Getting Started with Containers on IBM Cloud from IBM on 2019-01-20
+                            Getting started with Microservices with Istio and IBM Cloud Kubernetes Service from IBM on 2019-01-20
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Getting_started_with_Microservices_with_Istio_and_IBM_Cloud_Kubernetes_Service.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
                             Get started with Kubernetes and IBM Cloud Container Service from IBM on 2018-07-05
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Get_started_with_Kubernetes_and_IBM_Cloud_Container_Service.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
                             IBM Cloud Essentials from IBM on 2018-05-03
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/IBM_Cloud_Essentials.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
                             IBM Garage Methodology Explorer from IBM on 2021-04-23
-                        </li>
-                        <li>
-                            Enterprise Design Thinking Practitioner from IBM on 2019-01-19
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/IBM_Garage_Methodology_Explorer.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
                             Enterprise Design Thinking Co-Creator from IBM on 2020-06-26
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Enterprise_Design_Thinking_Co-Creator.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                        </li>
+                        <li>
+                            Enterprise Design Thinking Practitioner from IBM on 2019-01-19
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Enterprise_Design_Thinking_Practitioner.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
                             IBM Automation Essentials from IBM on 2020-04-04
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/IBM_Automation__Compass.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                         <li>
                             Cognitive Practitioner from IBM on 2018-06-02
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Cognitive_Practitioner.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
                     </p>
                 </div>
