--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
         </div>
         <ul id="menu" class="shadow">
             <li>
-                <a href="https://balkrishnabk.github.io/#about" target="_blank" rel="noopener noreferrer">About</a>
+                <a href="https://balkrishnabk.github.io/#about" target="_parent">About</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#experience" target="_blank" rel="noopener noreferrer">Experience</a>
+                <a href="https://balkrishnabk.github.io/#experience" target="_parent">Experience</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#responsibilities" target="_blank" rel="noopener noreferrer">Responsibilities</a>
+                <a href="https://balkrishnabk.github.io/#responsibilities" target="_parent">Responsibilities</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#honors" target="_blank" rel="noopener noreferrer">Honors & awards</a>
+                <a href="https://balkrishnabk.github.io/#honors" target="_parent">Honors & awards</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#skills" target="_blank" rel="noopener noreferrer">Skills</a>
+                <a href="https://balkrishnabk.github.io/#skills" target="_parent">Skills</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#certificates" target="_blank" rel="noopener noreferrer">Certifications and Key Courses</a>
+                <a href="https://balkrishnabk.github.io/#certificates" target="_parent">Certifications and Key Courses</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#education" target="_blank" rel="noopener noreferrer">Education</a>
+                <a href="https://balkrishnabk.github.io/#education" target="_parent">Education</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#publications" target="_blank" rel="noopener noreferrer">Publications</a>
+                <a href="https://balkrishnabk.github.io/#publications" target="_parent">Publications</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#contact" target="_blank" rel="noopener noreferrer">Contact</a>
+                <a href="https://balkrishnabk.github.io/#contact" target="_parent">Contact</a>
             </li>
         </ul>
     </header>
